--- a/en/main-page-en.html
+++ b/en/main-page-en.html
@@ -14,7 +14,7 @@
 	<meta charset="utf-8" />
 	<link rel="stylesheet" href="../css/font-awesome.min.css" />
 	<link rel="shortcut icon" type="image/x-icon" href="../img/logo-dark.ico" media="screen" />
-	<link rel="stylesheet" type="text/css" href="../css/main-page.css" />
+	<link rel="stylesheet" type="text/css" href="../css/main-page-en.css" />
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
 	<script src="../js/parallax.js"></script>
 	<title>Vitctor VPN - Proxy Service</title>
@@ -30,7 +30,7 @@
 			<a class="bk" href="download-page-en.html">Downloads</a>
 			<a class="bk" role="button" id="hs">Help&nbsp;<i class="fa fa-angle-down fa-1x"></i></a>
 			<nav id="mq_hide">
-				<a class="bk" href="faq.html-en">FAQ</a>
+				<a class="bk" href="faq-en.html">FAQ</a>
 				<a class="bk" href="mac_guide-en.html">Mac Setup Guide</a>
 				<a class="bk" href="windows_guide-en.html">Windows Setup Guide</a>
 			</nav>
