--- a/signup-page.html
+++ b/signup-page.html
@@ -155,6 +155,10 @@
           {
             $("#error_display").html(NONE_USER);
             $("#error_display").removeClass("hide");
+            $("#error_display").css("height","40px");
+            $("#error_display").css("margin","0");
+            $("#error_display").css("padding","10px");
+            $(".signUp").css("height","490px");
             $("#register_email").css('background-color','#f2f2f2');
             $("#password").css('background-color','');
             $("#invite_email").css('background-color','');
@@ -164,6 +168,10 @@
           {
             $("#error_display").html(CORRECT_EMAIL);
             $("#error_display").removeClass("hide");
+            $("#error_display").css("height","40px");
+            $("#error_display").css("margin","0");
+            $("#error_display").css("padding","10px");
+            $(".signUp").css("height","490px");
             $("#register_email").css('background-color','#f2f2f2');
             $("#password").css('background-color','');
             $("#invite_email").css('background-color','');
@@ -174,6 +182,10 @@
             $("#register_email").css('background-color','');
             $("#error_display").html(NONE_PWD);
             $("#error_display").removeClass("hide");
+            $("#error_display").css("height","40px");
+            $("#error_display").css("margin","0");
+            $("#error_display").css("padding","10px");
+            $(".signUp").css("height","490px");
             $("#password").css('background-color','#f2f2f2');
             $("#invite_email").css('background-color','');
             return false;
@@ -183,6 +195,10 @@
             $("#register_email").css('background-color','');
             $("#error_display").html(PWD_LESS_6);
             $("#error_display").removeClass("hide");
+            $("#error_display").css("height","40px");
+            $("#error_display").css("margin","0");
+            $("#error_display").css("padding","10px");
+            $(".signUp").css("height","490px");
             $("#password").css('background-color','#f2f2f2');
             $("#invite_email").css('background-color','');
             return false;
@@ -192,6 +208,10 @@
             $("#error_display").html(MISMACTH_PWD);
             $("#new_password").css('background-color','');
             $("#error_display").removeClass("hide");
+            $("#error_display").css("height","40px");
+            $("#error_display").css("margin","0");
+            $("#error_display").css("padding","10px");
+            $(".signUp").css("height","490px");
             $("#confirm_password").css('background-color','#f2f2f2');
             return false;
           }
