--- a/tr_zh/signup-page-trzh.html
+++ b/tr_zh/signup-page-trzh.html
@@ -153,29 +153,41 @@
         var NONE_USER = "郵箱不能為空";
         var WRONG_PWD = "密碼錯誤";
         var CORRECT_EMAIL = "請輸入正確格式的郵箱";
-        if(reg_mail == '')
+if(reg_mail == '')
           {
             $("#error_display").html(NONE_USER);
             $("#error_display").removeClass("hide");
+            $("#error_display").css("height","40px");
+            $("#error_display").css("margin","0");
+            $("#error_display").css("padding","10px");
+            $(".signUp").css("height","490px");
             $("#register_email").css('background-color','#f2f2f2');
             $("#password").css('background-color','');
             $("#invite_email").css('background-color','');
             return false;
-          }
+           }
         else if(!$("#register_email").val().match(/^\w+((-\w+)|(\.\w+))*\@[A-Za-z0-9]+((\.|-)[A-Za-z0-9]+)*\.[A-Za-z0-9]+$/))
           {
             $("#error_display").html(CORRECT_EMAIL);
             $("#error_display").removeClass("hide");
+            $("#error_display").css("height","40px");
+            $("#error_display").css("margin","0");
+            $("#error_display").css("padding","10px");
+            $(".signUp").css("height","490px");
             $("#register_email").css('background-color','#f2f2f2');
             $("#password").css('background-color','');
             $("#invite_email").css('background-color','');
             return false;
-          }
+           }
         else if(pwd == '')
           {
             $("#register_email").css('background-color','');
             $("#error_display").html(NONE_PWD);
             $("#error_display").removeClass("hide");
+            $("#error_display").css("height","40px");
+            $("#error_display").css("margin","0");
+            $("#error_display").css("padding","10px");
+            $(".signUp").css("height","490px");
             $("#password").css('background-color','#f2f2f2');
             $("#invite_email").css('background-color','');
             return false;
@@ -185,6 +197,10 @@
             $("#register_email").css('background-color','');
             $("#error_display").html(PWD_LESS_6);
             $("#error_display").removeClass("hide");
+            $("#error_display").css("height","40px");
+            $("#error_display").css("margin","0");
+            $("#error_display").css("padding","10px");
+            $(".signUp").css("height","490px");
             $("#password").css('background-color','#f2f2f2');
             $("#invite_email").css('background-color','');
             return false;
@@ -194,6 +210,10 @@
             $("#error_display").html(MISMACTH_PWD);
             $("#new_password").css('background-color','');
             $("#error_display").removeClass("hide");
+            $("#error_display").css("height","40px");
+            $("#error_display").css("margin","0");
+            $("#error_display").css("padding","10px");
+            $(".signUp").css("height","490px");
             $("#confirm_password").css('background-color','#f2f2f2');
             return false;
           }
