--- a/contact.html
+++ b/contact.html
@@ -44,7 +44,7 @@
 			<p id="hide_content">.</p>
 		</nav>
 	</div>
-	<header class="mainTop" data-parallax="scroll" data-image-src="img/morit.jpg" data-speed="0.5">
+	<header class="mainTop" data-parallax="scroll" data-image-src="img/moriT.jpg" data-speed="0.5">
 		<div class="topRight">
 			<a href="###" class="touch_bar" ><i class="fa fa-bars fa-2x"></i></a>
 			<div id="logo">
