修改sign in和 sign up页面

--- a/en/signup-page-en.html
+++ b/en/signup-page-en.html
@@ -43,56 +43,56 @@
             <p id="hide_content">.</p>
         </nav>
     </div>
-    <header class="wrap">
-        <div class="glass"></div>
-        <div class="topRight">
-            <a href="###" class="touch_bar" ><i class="fa fa-bars fa-2x"></i></a>
-            <div id="logo">
-                <a href="main-page-en.html">
-                    <img src="../img/logo-light.png" style="background-size: 10%">
-                </a>
-            </div>
-            <div class="dropdown" id="dropdown1">
-                <ul>
-                    <li class="hx"><a href="plan-en.html">Plan</a></li>
-                    <li class="hx"><a href="download-page-en.html">Downloads</a></li>
-                    <li class="hx">
-                        <a id="help" role="button" class="dropdown-toggle hover1" data-toggle="dropdown" >Help&nbsp;&nbsp;<i class="fa fa-angle-down fa-1x"></i></a> 
-                            <ul class="dropdown-menu hover0" id="box1" role="menu" aria-labelledby="drop1">
-                                <li><a href="faq-en.html">FAQ</a></li>
-                                <li><a href="mac_guide-en.html">Mac Setup Guide</a></li>
-                                <li><a href="windows_guide-en.html">Windows Setup Guide</a></li>
-                            </ul>
-                    </li>
-                    <li class="hx"><a href="sign in-page-en.html">Sign In</a></li>
-                    <li class="hx"><a href="signup-page-en.html">Sign Up</a></li>
-                    <li class="hx">
-                        <a role="button" class="dropdown-toggle hover1" data-toggle="dropdown" >English&nbsp;&nbsp;<i class="fa fa-angle-down fa-1x"></i></a>
-                            <ul class="dropdown-menu hover0" id="box2" role="menu" aria-labelledby="drop1">
-                                <li><a href="../signup-page.html">中文（简体）</a></li>
-                                <li><a href="../tr_zh/signup-page-trzh.html">中文（繁體）</a></li>
-                            </ul>
-                    </li>
-                </ul>
-            </div>
-        </div>
-    </header>
-    <div class="signUp">
-        <h3 class="uppercase">CREATE ACCOUNT</h3>
-        <div class="alert alert-danger hide" role="alert" id="error_display"></div>
-        <div class="typein"><input type="text" name="register_email" id="register_email" placeholder="Email or ID" /></div>
-        <div class="typein"><input type="password" placeholder="Password" name="password" id="password" /></div>
-        <div class="typein"><input type="password" name="confirm_password" id="confirm_password" placeholder="Confirm Password"  /></div>
-        <button type="submit" onClick="register_check()" id="register_button">CREATE ACCOUNT</button>
-        <p class="mb0">By clicking sign up you agree to our
-            <a href="terms-trzh.html">
-                Terms of Use
+    <div class="glass"></div>
+    <div class="topRight">
+        <a href="###" class="touch_bar" ><i class="fa fa-bars fa-2x"></i></a>
+        <div id="logo">
+            <a href="main-page-en.html">
+                <img src="../img/logo-light.png" style="background-size: 10%">
             </a>
-              和
-            <a href="privacy-trzh.html">
-                Privacy Police.
-            </a>。
-        </p>
+        </div>
+        <div class="dropdown" id="dropdown1">
+            <ul>
+                <li class="hx"><a href="plan-en.html">Plan</a></li>
+                <li class="hx"><a href="download-page-en.html">Downloads</a></li>
+                <li class="hx">
+                    <a id="help" role="button" class="dropdown-toggle hover1" data-toggle="dropdown" >Help&nbsp;&nbsp;<i class="fa fa-angle-down fa-1x"></i></a> 
+                        <ul class="dropdown-menu hover0" id="box1" role="menu" aria-labelledby="drop1">
+                            <li><a href="faq-en.html">FAQ</a></li>
+                            <li><a href="mac_guide-en.html">Mac Setup Guide</a></li>
+                            <li><a href="windows_guide-en.html">Windows Setup Guide</a></li>
+                        </ul>
+                </li>
+                <li class="hx"><a href="sign in-page-en.html">Sign In</a></li>
+                <li class="hx"><a href="signup-page-en.html">Sign Up</a></li>
+                <li class="hx">
+                    <a role="button" class="dropdown-toggle hover1" data-toggle="dropdown" >English&nbsp;&nbsp;<i class="fa fa-angle-down fa-1x"></i></a>
+                        <ul class="dropdown-menu hover0" id="box2" role="menu" aria-labelledby="drop1">
+                            <li><a href="../signup-page.html">中文（简体）</a></li>
+                            <li><a href="../tr_zh/signup-page-trzh.html">中文（繁體）</a></li>
+                        </ul>
+                </li>
+            </ul>
+        </div>
+    </div>
+    <div class="container">
+        <div class="signUp">
+            <h3 class="uppercase">CREATE ACCOUNT</h3>
+            <div class="alert alert-danger hide" role="alert" id="error_display"></div>
+            <div class="typein"><input type="text" name="register_email" id="register_email" placeholder="Email or ID" /></div>
+            <div class="typein"><input type="password" placeholder="Password" name="password" id="password" /></div>
+            <div class="typein"><input type="password" name="confirm_password" id="confirm_password" placeholder="Confirm Password"  /></div>
+            <button type="submit" onClick="register_check()" id="register_button">CREATE ACCOUNT</button>
+            <p class="mb0">By clicking sign up you agree to our
+                <a href="terms-trzh.html">
+                    Terms of Use
+                </a>
+                  和
+                <a href="privacy-trzh.html">
+                    Privacy Police.
+                </a>。
+            </p>
+        </div>
     </div>    
 </body>
 <script type="text/javascript">
