--- a/tr_zh/signup-page-trzh.html
+++ b/tr_zh/signup-page-trzh.html
@@ -43,57 +43,57 @@
             <p id="hide_content">.</p>
         </nav>
     </div>
-  	<header class="wrap">
-    		<div class="glass"></div>
-    		<div class="topRight">
-            <a href="###" class="touch_bar" ><i class="fa fa-bars fa-2x"></i></a>
-      			<div id="logo">
-        				<a href="main-page-trzh.html">
-                    <img src="../img/logo-light.png" style="background-size: 10%">
-        				</a>
-      			</div>
-      			<div class="dropdown" id="dropdown1">
-      				  <ul>
-          					<li class="hx"><a href="plan-trzh.html">套餐</a></li>
-          					<li class="hx"><a href="download-page-trzh.html">下載</a></li>
-          					<li class="hx">
-      						      <a id="help" role="button" class="dropdown-toggle hover1" data-toggle="dropdown" >幫助&nbsp;&nbsp;<i class="fa fa-angle-down fa-1x"></i></a> 
-      						          <ul class="dropdown-menu hover0" id="box1" role="menu" aria-labelledby="drop1">
-                  							<li><a href="faq-trzh.html">常見問題</a></li>
-                  							<li><a href="mac_guide-trzh.html">Mac設置指南</a></li>
-                  							<li><a href="windows_guide-trzh.html">Windows設置指南</a></li>
-      						          </ul>
-                    </li>
-          					<li class="hx"><a href="sign in-page-trzh.html">登入</a></li>
-          					<li class="hx"><a href="signup-page-trzh.html">註冊</a></li>
-          					<li class="hx">
-            						<a role="button" class="dropdown-toggle hover1" data-toggle="dropdown" >中文（繁體）&nbsp;&nbsp;<i class="fa fa-angle-down fa-1x"></i></a>
-            						    <ul class="dropdown-menu hover0" id="box2" role="menu" aria-labelledby="drop1">
-                  							<li><a href="../en/signup-page-en.html">English</a></li>
-                  							<li><a href="../signup-page.html">中文（簡體）</a></li>
-      						          </ul>
-                    </li>
-      				  </ul>
-      			</div>
-  		  </div>
-  	</header>
-    <div class="signUp">
-        <h3 class="uppercase">創建賬戶</h3>
-        <div class="alert alert-danger hide" role="alert" id="error_display"></div>
-        <div class="typein"><input type="text" name="register_email" id="register_email" placeholder="郵箱或ID" /></div>
-        <div class="typein"><input type="password" placeholder="密碼" name="password" id="password" /></div>
-        <div class="typein"><input type="password" name="confirm_password" id="confirm_password" placeholder="確認密碼"  /></div>
-        <button type="submit" onClick="register_check()" id="register_button">創建賬戶</button>
-        <p class="mb0">點擊註冊，即表示您同意我們的
-            <a href="terms-trzh.html">
-                《服務條款》
-            </a>
-            	和
-            <a href="privacy-trzh.html">
-                《隱私政策》
-            </a>。
-        </p>
-    </div>    
+		<div class="glass"></div>
+		<div class="topRight">
+        <a href="###" class="touch_bar" ><i class="fa fa-bars fa-2x"></i></a>
+  			<div id="logo">
+    				<a href="main-page-trzh.html">
+                <img src="../img/logo-light.png" style="background-size: 10%">
+    				</a>
+  			</div>
+  			<div class="dropdown" id="dropdown1">
+  				  <ul>
+      					<li class="hx"><a href="plan-trzh.html">套餐</a></li>
+      					<li class="hx"><a href="download-page-trzh.html">下載</a></li>
+      					<li class="hx">
+  						      <a id="help" role="button" class="dropdown-toggle hover1" data-toggle="dropdown" >幫助&nbsp;&nbsp;<i class="fa fa-angle-down fa-1x"></i></a> 
+  						          <ul class="dropdown-menu hover0" id="box1" role="menu" aria-labelledby="drop1">
+              							<li><a href="faq-trzh.html">常見問題</a></li>
+              							<li><a href="mac_guide-trzh.html">Mac設置指南</a></li>
+              							<li><a href="windows_guide-trzh.html">Windows設置指南</a></li>
+  						          </ul>
+                </li>
+      					<li class="hx"><a href="sign in-page-trzh.html">登入</a></li>
+      					<li class="hx"><a href="signup-page-trzh.html">註冊</a></li>
+      					<li class="hx">
+        						<a role="button" class="dropdown-toggle hover1" data-toggle="dropdown" >中文（繁體）&nbsp;&nbsp;<i class="fa fa-angle-down fa-1x"></i></a>
+        						    <ul class="dropdown-menu hover0" id="box2" role="menu" aria-labelledby="drop1">
+              							<li><a href="../en/signup-page-en.html">English</a></li>
+              							<li><a href="../signup-page.html">中文（簡體）</a></li>
+  						          </ul>
+                </li>
+  				  </ul>
+  			</div>
+	  </div>
+    <div class="container">
+        <div class="signUp">
+            <h3 class="uppercase">創建賬戶</h3>
+            <div class="alert alert-danger hide" role="alert" id="error_display"></div>
+            <div class="typein"><input type="text" name="register_email" id="register_email" placeholder="郵箱或ID" /></div>
+            <div class="typein"><input type="password" placeholder="密碼" name="password" id="password" /></div>
+            <div class="typein"><input type="password" name="confirm_password" id="confirm_password" placeholder="確認密碼"  /></div>
+            <button type="submit" onClick="register_check()" id="register_button">創建賬戶</button>
+            <p class="mb0">點擊註冊，即表示您同意我們的
+                <a href="terms-trzh.html">
+                    《服務條款》
+                </a>
+                	和
+                <a href="privacy-trzh.html">
+                    《隱私政策》
+                </a>。
+            </p>
+        </div>   
+    </div> 
 </body>
 <script type="text/javascript">
     $(window).ready(function(){ 
