--- a/en/sign in-page-en.html
+++ b/en/sign in-page-en.html
@@ -43,56 +43,56 @@
 			<p id="hide_content">.</p>
 		</nav>
 	</div>
-	<header class="wrap">
-		<div class="glass"></div>
-		<div class="topRight">
-			<a href="###" class="touch_bar" ><i class="fa fa-bars fa-2x"></i></a>
-			<div id="logo">
-				<a href="main-page-en.html">
-					<img src="../img/logo-light.png" style="background-size: 10%">
-				</a>
-			</div>
-			<div class="dropdown" id="dropdown1">
-				<ul>
-					<li class="hx"><a href="plan-en.html">Plan</a></li>
-					<li class="hx"><a href="download-page-en.html">Downloads</a></li>
-					<li class="hx">
-						<a id="help" role="button" class="dropdown-toggle hover1" data-toggle="dropdown" >Help&nbsp;&nbsp;<i class="fa fa-angle-down fa-1x"></i></a> 
-						<ul class="dropdown-menu hover0" id="box1" role="menu" aria-labelledby="drop1">
-							<li><a href="faq-en.html">FAQ</a></li>
-							<li><a href="mac_guide-en.html">Mac Setup Guide</a></li>
-							<li><a href="windows_guide-en.html">Windows Setup Guide</a></li>
-						</ul>
-					</li>
-					<li class="hx"><a href="sign in-page-en.html">Sign In</a></li>
-					<li class="hx"><a href="signup-page-en.html">Sign Up</a></li>
-					<li class="hx">
-						<a role="button" class="dropdown-toggle hover1" data-toggle="dropdown" >English&nbsp;&nbsp;<i class="fa fa-angle-down fa-1x"></i></a>
-						<ul class="dropdown-menu hover0" id="box2" role="menu" aria-labelledby="drop1">
-							<li><a href="../sign in-page.html">中文（简体）</a></li>
-							<li><a href="../tr_zh/sign in-page-trzh.html">中文（繁體）</a></li>
-						</ul>
-					</li>
-				</ul>
-			</div>
+	<div class="glass"></div>
+	<div class="topRight">
+		<a href="###" class="touch_bar" ><i class="fa fa-bars fa-2x"></i></a>
+		<div id="logo">
+			<a href="main-page-en.html">
+				<img src="../img/logo-light.png" style="background-size: 10%">
+			</a>
 		</div>
-	</header>
-	<div class="login">
-		<p class="title1">SIGN IN</p>
-		<div class="alert alert-danger hide" role="alert" id="error_display"></div>
-		<form class="text-left" action="#" method="post" onsubmit = "return check()">
-			<div class="em"><input type="text" placeholder="Email or ID" name="email" id="email" /></div>
-			<div class="pw"><input type="password" placeholder="Password" name="password" id="password" /></div>
-			<p><input type="checkbox" name="loginkeeping" />Remember me</p>
-			<input type="submit" class="login2" value="SIGN IN" />
-		</form>
-		<p class="forgot">
-			<a href="#">Forgot Password?</a>			
-		</p>
-		<p class="no_id">
-			<a href="signup-page-en.html">Create account</a>			
-		</p>
+		<div class="dropdown" id="dropdown1">
+			<ul>
+				<li class="hx"><a href="plan-en.html">Plan</a></li>
+				<li class="hx"><a href="download-page-en.html">Downloads</a></li>
+				<li class="hx">
+					<a id="help" role="button" class="dropdown-toggle hover1" data-toggle="dropdown" >Help&nbsp;&nbsp;<i class="fa fa-angle-down fa-1x"></i></a> 
+					<ul class="dropdown-menu hover0" id="box1" role="menu" aria-labelledby="drop1">
+						<li><a href="faq-en.html">FAQ</a></li>
+						<li><a href="mac_guide-en.html">Mac Setup Guide</a></li>
+						<li><a href="windows_guide-en.html">Windows Setup Guide</a></li>
+					</ul>
+				</li>
+				<li class="hx"><a href="sign in-page-en.html">Sign In</a></li>
+				<li class="hx"><a href="signup-page-en.html">Sign Up</a></li>
+				<li class="hx">
+					<a role="button" class="dropdown-toggle hover1" data-toggle="dropdown" >English&nbsp;&nbsp;<i class="fa fa-angle-down fa-1x"></i></a>
+					<ul class="dropdown-menu hover0" id="box2" role="menu" aria-labelledby="drop1">
+						<li><a href="../sign in-page.html">中文（简体）</a></li>
+						<li><a href="../tr_zh/sign in-page-trzh.html">中文（繁體）</a></li>
+					</ul>
+				</li>
+			</ul>
+		</div>
 	</div>
+    <div class="container">
+    	<div class="login">
+    		<p class="title1">SIGN IN</p>
+    		<div class="alert alert-danger hide" role="alert" id="error_display"></div>
+    		<form class="text-left" action="#" method="post" onsubmit = "return check()">
+    			<div class="em"><input type="text" placeholder="Email or ID" name="email" id="email" /></div>
+    			<div class="pw"><input type="password" placeholder="Password" name="password" id="password" /></div>
+    			<p><input type="checkbox" name="loginkeeping" />Remember me</p>
+    			<input type="submit" class="login2" value="SIGN IN" />
+    		</form>
+    		<p class="forgot">
+    			<a href="#">Forgot Password?</a>			
+    		</p>
+    		<p class="no_id">
+    			<a href="signup-page-en.html">Create account</a>			
+    		</p>
+    	</div>
+    </div>
 </body>
 <script type="text/javascript">
 	$(window).ready(function(){
