--- a/sign in-page.html
+++ b/sign in-page.html
@@ -43,56 +43,56 @@
 			<p id="hide_content">.</p>
 		</nav>
 	</div>
-	<header class="wrap">
-		<div class="glass"></div>
-		<div class="topRight">
-			<a href="###" class="touch_bar" ><i class="fa fa-bars fa-2x"></i></a>
-			<div id="logo">
-				<a href="main-page.html">
-					<img src="img/logo-light.png" style="background-size: 10%">
-				</a>
-			</div>
-			<div class="dropdown" id="dropdown1">
-				<ul>
-					<li class="hx"><a href="plan.html">套餐</a></li>
-					<li class="hx"><a href="download-page.html">下载</a></li>
-					<li class="hx">
-						<a id="help" role="button" class="dropdown-toggle hover1" data-toggle="dropdown" >帮助&nbsp;&nbsp;<i class="fa fa-angle-down fa-1x"></i></a> 
-						<ul class="dropdown-menu hover0" id="box1" role="menu" aria-labelledby="drop1">
-							<li><a href="faq.html">常见问题</a></li>
-							<li><a href="mac_guide.html">Mac设置指南</a></li>
-							<li><a href="windows_guide.html">Windows设置指南</a></li>
-						</ul>
-					</li>
-					<li class="hx"><a href="sign in-page.html">登入</a></li>
-					<li class="hx"><a href="signup-page.html">注册</a></li>
-					<li class="hx">
-						<a role="button" class="dropdown-toggle hover1" data-toggle="dropdown" >中文（简体）&nbsp;&nbsp;<i class="fa fa-angle-down fa-1x"></i></a>
-						<ul class="dropdown-menu hover0" id="box2" role="menu" aria-labelledby="drop1">
-							<li><a href="en/sign in-page-en.html">English</a></li>
-							<li><a href="tr_zh/sign in-page-trzh.html">中文（繁体）</a></li>
-						</ul>
-					</li>
-				</ul>
-			</div>
+	<div class="glass"></div>
+	<div class="topRight">
+		<a href="###" class="touch_bar" ><i class="fa fa-bars fa-2x"></i></a>
+		<div id="logo">
+			<a href="main-page.html">
+				<img src="img/logo-light.png" style="background-size: 10%">
+			</a>
 		</div>
-	</header>
-	<div class="login">
-		<p class="title1">登入</p>
-		<div class="alert alert-danger hide" role="alert" id="error_display"></div>
-		<form class="text-left" action="#" method="post" onsubmit = "return check()">
-			<div class="em"><input type="text" placeholder="邮箱或者ID" name="email" id="email" /></div>
-			<div class="pw"><input type="password" placeholder="密码" name="password" id="password" /></div>
-			<p><input type="checkbox" name="loginkeeping" />下次自动登录</p>
-			<input type="submit" class="login2" value="登入" />
-		</form>
-		<p class="forgot">
-			<a href="#">忘记密码？点此重置</a>			
-		</p>
-		<p class="no_id">
-			<a href="signup-page.html">没有账号？前往注册</a>			
-		</p>
+		<div class="dropdown" id="dropdown1">
+			<ul>
+				<li class="hx"><a href="plan.html">套餐</a></li>
+				<li class="hx"><a href="download-page.html">下载</a></li>
+				<li class="hx">
+					<a id="help" role="button" class="dropdown-toggle hover1" data-toggle="dropdown" >帮助&nbsp;&nbsp;<i class="fa fa-angle-down fa-1x"></i></a> 
+					<ul class="dropdown-menu hover0" id="box1" role="menu" aria-labelledby="drop1">
+						<li><a href="faq.html">常见问题</a></li>
+						<li><a href="mac_guide.html">Mac设置指南</a></li>
+						<li><a href="windows_guide.html">Windows设置指南</a></li>
+					</ul>
+				</li>
+				<li class="hx"><a href="sign in-page.html">登入</a></li>
+				<li class="hx"><a href="signup-page.html">注册</a></li>
+				<li class="hx">
+					<a role="button" class="dropdown-toggle hover1" data-toggle="dropdown" >中文（简体）&nbsp;&nbsp;<i class="fa fa-angle-down fa-1x"></i></a>
+					<ul class="dropdown-menu hover0" id="box2" role="menu" aria-labelledby="drop1">
+						<li><a href="en/sign in-page-en.html">English</a></li>
+						<li><a href="tr_zh/sign in-page-trzh.html">中文（繁体）</a></li>
+					</ul>
+				</li>
+			</ul>
+		</div>
 	</div>
+    <div class="container">
+    	<div class="login">
+    		<p class="title1">登入</p>
+    		<div class="alert alert-danger hide" role="alert" id="error_display"></div>
+    		<form class="text-left" action="#" method="post" onsubmit = "return check()">
+    			<div class="em"><input type="text" placeholder="邮箱或者ID" name="email" id="email" /></div>
+    			<div class="pw"><input type="password" placeholder="密码" name="password" id="password" /></div>
+    			<p><input type="checkbox" name="loginkeeping" />下次自动登录</p>
+    			<input type="submit" class="login2" value="登入" />
+    		</form>
+    		<p class="forgot">
+    			<a href="#">忘记密码？点此重置</a>			
+    		</p>
+    		<p class="no_id">
+    			<a href="signup-page.html">没有账号？前往注册</a>			
+    		</p>
+    	</div>
+    </div>
 </body>
 <script type="text/javascript">
 	$(window).ready(function(){
