--- a/tr_zh/sign in-page-trzh.html
+++ b/tr_zh/sign in-page-trzh.html
@@ -43,56 +43,56 @@
 			<p id="hide_content">.</p>
 		</nav>
 	</div>
-	<header class="wrap">
-		<div class="glass"></div>
-		<div class="topRight">
-			<a href="###" class="touch_bar" ><i class="fa fa-bars fa-2x"></i></a>
-			<div id="logo">
-				<a href="main-page-trzh.html">
-					<img src="../img/logo-light.png" style="background-size: 10%">
-				</a>
-			</div>
-			<div class="dropdown" id="dropdown1">
-				<ul>
-					<li class="hx"><a href="plan-trzh.html">套餐</a></li>
-					<li class="hx"><a href="download-page-trzh.html">下載</a></li>
-					<li class="hx">
-						<a id="help" role="button" class="dropdown-toggle hover1" data-toggle="dropdown" >幫助&nbsp;&nbsp;<i class="fa fa-angle-down fa-1x"></i></a> 
-						<ul class="dropdown-menu hover0" id="box1" role="menu" aria-labelledby="drop1">
-							<li><a href="faq-trzh.html">常見問題</a></li>
-							<li><a href="mac_guide-trzh.html">Mac設置指南</a></li>
-							<li><a href="windows_guide-trzh.html">Windows設置指南</a></li>
-						</ul>
-					</li>
-					<li class="hx"><a href="sign in-page-trzh.html">登入</a></li>
-					<li class="hx"><a href="signup-page-trzh.html">註冊</a></li>
-					<li class="hx">
-						<a role="button" class="dropdown-toggle hover1" data-toggle="dropdown" >中文（繁體）&nbsp;&nbsp;<i class="fa fa-angle-down fa-1x"></i></a>
-						<ul class="dropdown-menu hover0" id="box2" role="menu" aria-labelledby="drop1">
-							<li><a href="../en/sign in-page-en.html">English</a></li>
-							<li><a href="../sign in-page.html">中文（簡體）</a></li>
-						</ul>
-					</li>
-				</ul>
-			</div>
+	<div class="glass"></div>
+	<div class="topRight">
+		<a href="###" class="touch_bar" ><i class="fa fa-bars fa-2x"></i></a>
+		<div id="logo">
+			<a href="main-page-trzh.html">
+				<img src="../img/logo-light.png" style="background-size: 10%">
+			</a>
 		</div>
-	</header>
-	<div class="login">
-		<p class="title1">登入</p>
-		<div class="alert alert-danger hide" role="alert" id="error_display"></div>
-		<form class="text-left" action="#" method="post" onsubmit = "return check()">
-			<div class="em"><input type="text" placeholder="郵箱或者ID" name="email" id="email" /></div>
-			<div class="pw"><input type="password" placeholder="密碼" name="password" id="password" /></div>
-			<p><input type="checkbox" name="loginkeeping" />下次自動登錄</p>
-			<input type="submit" class="login2" value="登入" />
-		</form>
-		<p class="forgot">
-			<a href="#">忘記密碼？點此重置</a>			
-		</p>
-		<p class="no_id">
-			<a href="signup-page-trzh.html">沒有賬號？前往註冊</a>			
-		</p>
+		<div class="dropdown" id="dropdown1">
+			<ul>
+				<li class="hx"><a href="plan-trzh.html">套餐</a></li>
+				<li class="hx"><a href="download-page-trzh.html">下載</a></li>
+				<li class="hx">
+					<a id="help" role="button" class="dropdown-toggle hover1" data-toggle="dropdown" >幫助&nbsp;&nbsp;<i class="fa fa-angle-down fa-1x"></i></a> 
+					<ul class="dropdown-menu hover0" id="box1" role="menu" aria-labelledby="drop1">
+						<li><a href="faq-trzh.html">常見問題</a></li>
+						<li><a href="mac_guide-trzh.html">Mac設置指南</a></li>
+						<li><a href="windows_guide-trzh.html">Windows設置指南</a></li>
+					</ul>
+				</li>
+				<li class="hx"><a href="sign in-page-trzh.html">登入</a></li>
+				<li class="hx"><a href="signup-page-trzh.html">註冊</a></li>
+				<li class="hx">
+					<a role="button" class="dropdown-toggle hover1" data-toggle="dropdown" >中文（繁體）&nbsp;&nbsp;<i class="fa fa-angle-down fa-1x"></i></a>
+					<ul class="dropdown-menu hover0" id="box2" role="menu" aria-labelledby="drop1">
+						<li><a href="../en/sign in-page-en.html">English</a></li>
+						<li><a href="../sign in-page.html">中文（簡體）</a></li>
+					</ul>
+				</li>
+			</ul>
+		</div>
 	</div>
+    <div class="container">
+    	<div class="login">
+    		<p class="title1">登入</p>
+    		<div class="alert alert-danger hide" role="alert" id="error_display"></div>
+    		<form class="text-left" action="#" method="post" onsubmit = "return check()">
+    			<div class="em"><input type="text" placeholder="郵箱或者ID" name="email" id="email" /></div>
+    			<div class="pw"><input type="password" placeholder="密碼" name="password" id="password" /></div>
+    			<p><input type="checkbox" name="loginkeeping" />下次自動登錄</p>
+    			<input type="submit" class="login2" value="登入" />
+    		</form>
+    		<p class="forgot">
+    			<a href="#">忘記密碼？點此重置</a>			
+    		</p>
+    		<p class="no_id">
+    			<a href="signup-page-trzh.html">沒有賬號？前往註冊</a>			
+    		</p>
+    	</div>
+    </div>
 </body>
 <script type="text/javascript">
 	$(window).ready(function(){
