--- a/en/signup-page-en.html
+++ b/en/signup-page-en.html
@@ -84,11 +84,11 @@
             <div class="typein"><input type="password" name="confirm_password" id="confirm_password" placeholder="Confirm Password"  /></div>
             <button type="submit" onClick="register_check()" id="register_button">CREATE ACCOUNT</button>
             <p class="mb0">By clicking sign up you agree to our
-                <a href="terms-trzh.html">
+                <a href="terms-en.html">
                     Terms of Use
                 </a>
                   和
-                <a href="privacy-trzh.html">
+                <a href="privacy-en.html">
                     Privacy Police.
                 </a>。
             </p>
