修复了多语言下video不显示的问题

--- a/en/main-page-en.html
+++ b/en/main-page-en.html
@@ -76,6 +76,7 @@
 		</div>
 	</header>
 	<div class="bkgi" data-parallax="scroll" data-image-src="../img/mori.jpg" data-speed="0.5" ></div>
+	<video id="autoplay" autoplay loop src="https://at-v3-prod.s3.amazonaws.com/assets/projects/work/emmit/video.mp4"></video>
 	<div class="top">
 		<div class="mainText">
 			<h2>Unlimited Horizon, Infinite Heart</h2>
