--- a/main-page.html
+++ b/main-page.html
@@ -10,6 +10,7 @@
     <script src = "js/jquery-1.11.0.min.js"></script>
     <script src = "js/bootstrap.min.js"></script>
     <script src="js/parallax.js"></script>
+	<script src="js/loading.js"></script>
 	<meta charset="utf-8" />
 	<link rel="shortcut icon" type="image/x-icon" href="img/logo-dark.ico" media="screen" />
 	<link rel="stylesheet" href="css/font-awesome.min.css" />
@@ -18,6 +19,7 @@
 	<link rel="stylesheet" type="text/css" href="css/main-page.css" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 	<title>Vitctor跨域网络优化服务 - 科学上网</title>
+
 </head>
 <body>
 	<a href="###" class="touch_bar" ><i class="fa fa-bars fa-2x"></i></a>
