更新了加载动画，并且应用到所有页面

--- a/contact.html
+++ b/contact.html
@@ -17,9 +17,12 @@
 	<link rel="stylesheet" type="text/css" href="css/contact.css" />
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 	<script src="js/parallax.js"></script>
+	<link rel="stylesheet" href="css/loading.css">
 	<title>联系我们</title>
+    <script src="js/loading.js"></script>
 </head>
 <body>
+	<div id="loadingDiv"><div class = "loader" ></div></div>
 	<a href="###" class="touch_bar" ><i class="fa fa-bars fa-2x"></i></a>
 	<div class="slideEvent">
 		<nav class="media_q">
