--- a/en/privacy-en.html
+++ b/en/privacy-en.html
@@ -18,9 +18,12 @@
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
 	<script src="../js/parallax.js"></script>
 	<title>PRIVACY</title>
+	<script src="../js/loading.js"></script>
+	<link rel="stylesheet" href="../css/loading.css">
 </head>
 <body>
 	<a href="###" class="touch_bar" ><i class="fa fa-bars fa-2x"></i></a>
+	<div id="loadingDiv"><div class = "loader" ></div></div>
 	<div class="slideEvent">
 		<nav class="media_q">
 			<a href="main-page-en.html">
