--- a/plan.html
+++ b/plan.html
@@ -18,8 +18,11 @@
 	<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
 	<script src="js/parallax.js"></script>
 	<title>套餐</title>
+	<link rel="stylesheet" href="css/loading.css">
+	<script src="js/loading.js"></script>
 </head>
 <body>
+	<div id="loadingDiv"><div class = "loader" ></div></div>
 	<a href="###" class="touch_bar" ><i class="fa fa-bars fa-2x"></i></a>
 	<div class="slideEvent">
 		<nav class="media_q">
