--- a/signup-page.html
+++ b/signup-page.html
@@ -16,10 +16,13 @@
     <link rel="shortcut icon" type="image/x-icon" href="img/logo-dark.ico" media="screen" />
     <link rel="stylesheet" type="text/css" href="css/signup-page.css" />
     <link rel="stylesheet" type="text/css" href="css/bootstrap.min.css" />
-<title>注册</title>
+    <title>注册</title>
+    <script src="js/loading.js"></script>
+    <link rel="stylesheet" href="css/loading.css">
 </head>
 <body>
       <a href="###" class="touch_bar" ><i class="fa fa-bars fa-2x"></i></a>
+      <div id="loadingDiv"><div class = "loader" ></div></div>
       <div class="slideEvent">
           <nav class="media_q">
               <a href="main-page.html">
