--- a/tr_zh/sign in-page-trzh.html
+++ b/tr_zh/sign in-page-trzh.html
@@ -17,9 +17,12 @@
 	<link rel="stylesheet" type="text/css" href="../css/sign in-page.css" />
 	<link rel="stylesheet" type="text/css" href="../css/bootstrap.min.css" />
 	<title>登入</title>
+	<link rel="stylesheet" href="../css/loading.css">
+	<script src="../js/loading.js"></script>
 </head>
 <body>
 	<a href="###" class="touch_bar" ><i class="fa fa-bars fa-2x"></i></a>
+	<div id="loadingDiv"><div class = "loader" ></div></div>
 	<div class="slideEvent">
 		<nav class="media_q">
 			<a href="main-page-trzh.html">
