--- a/tr_zh/windows_guide-trzh.html
+++ b/tr_zh/windows_guide-trzh.html
@@ -72,7 +72,7 @@
 					<li class="hx">
 						<a role="button" class="dropdown-toggle hover1" data-toggle="dropdown" >中文（繁體）&nbsp;&nbsp;<i class="fa fa-angle-down fa-1x"></i></a>
 						<ul class="dropdown-menu hover0" id="box2" role="menu" aria-labelledby="drop1">
-							<li class="lg1"><a class="lg1" href="../en/windows_guide.html">English</a></li>
+							<li class="lg1"><a class="lg1" href="../en/windows_guide-en.html">English</a></li>
 							<li class="lg1"><a class="lg1" href="../windows_guide.html">中文（簡體）</a></li>
 						</ul>
 					</li>
