--- a/faq.html
+++ b/faq.html
@@ -98,58 +98,39 @@
 					<h1>1. Victor和其他网络优化服务有什么不同？</h1>
 					<p>和其他使用开源方案的同类服务不一样，Victor使用独家研发的 Smart Tunnel 技术，更适合中国区复杂的网络环境，能完全避免第三方干扰，从而保证极佳的速度和稳定性。</p>
 				</section>
-					<div class="switch1">
-						<section>
-							<h1>2. 电脑端不能正常使用？</h1>
-							<p>
-								请检查：<br/>
-								1) 账户的服务状态是否显示“正常”——可在网站个人页面或Victor电脑客户端查看账户详情<br/>
-								2) 电脑客户端是否运行正常<br/>
-								3) Mac 上的 FireFox，Windows 上的各类浏览器，是否都已正确配置，并已勾选“Victor”代理<br/>
-								4) 电脑上的防火墙是否误删或禁用了Victor。如是，请将Victor加入白名单或重新安装<br/>
-							</p>
-						</section>
-						<section>
-							<h1>3. 电脑网页都无法打开？</h1>
-							<p>Mac上的FireFox，或Windows上的各类浏览器，电脑客户端与网页代理需同时配置正确，才能保证正常上网。可参照“配置指南”检查配置。</p>
-							<p>如果您退出了电脑客户端，需要勾除浏览器上的“Victor”代理，才能正常访问网站。再次启动客户端时，请记得在浏览器重新勾选。</p>
-							<p>如果您同时安装了 Unblock Youku 等反代理插件，需先停用它。</p>
-						</section>
-						<section>
-							<h1>4. 卸载电脑端后，无法正常上网？</h1>
-							<p>
-								当卸载客户端后，请参照以下说明，恢复浏览器原本配置：<br/>
-								1) Chrome：点击工具栏右上的“地球”图标，选择直接连接。<br/>
-								2) Firefox：点击菜单键 —>“选项” —>“高级”—>“网络”—>连接中的“设置”—>“不使用代理”。<br/>
-								3) 360浏览器：点击工具栏右上的“小地球”图标， 选择直接连接。<br/>
-								4) Dropbox：将“代理服务器”设置选择“无代理服务器”。<br/>
-							</p>
-						</section>
-						<section>
-							<h1>5. 被杀毒软件报告是病毒？</h1>
-							<p>Victor有时会被杀毒软件误认为病毒（有时实在是过度敏感）。如遇到此类情况，请允许程序运行，或将程序添加到白名单。</p>
-							<p>如客户端提示“核心程序被删除”，说明程序已被误删，请重新下载和安装。</p>
-						</section>
-					</div>
-					<div class="switch2">
-						<section>
-							<h1>2. 速度不理想怎么办？</h1>
-							<p>第一次配置，Victor会自动分配最优线路，但有时默认的线路不一定一直适合您的网络环境。如果感觉网速慢，可以尝试切换另一个线路。</p>
-							<p>iOS设备由于系统特性，在切换线路后，需重新保存配置文件</p>
-						</section>
-						<section>
-							<h1>3. 手机可以连接上，但无法加载网页？</h1>
-							<p>在使用中国移动 4G 网络时，Victor有可能无法加载网页，这是移动 4G 网络特有的问题造成的。Victor会在未来版本尽快完善此问题。</p>
-						</section>
-						<section>
-							<h1>4. 在手机上运行Victor后，一些国内网站的速度变慢了？</h1>
-							<p>有时会有一些国内网站被误判为海外网站。这时，您可以暂时断开Victor，等需要访问海外网站时，再连接。我们会不断完善该项技术，提升使用体验。</p>
-						</section>
-						<section>
-							<h1>5. 在安卓上运行后，有些网站仍打不开？</h1>
-							<p>由于安卓设备的特殊性，Victor默认的“智能分流”模式有可能无法覆盖所有网站。您可以根据您的具体使用情况，在“连接设置”界面切换“全局翻墙”和“智能分流”两种模式。</p>
-						</section>
-					</div>
+				<div id="oAjax">
+					<section>
+						<h1>2. 电脑端不能正常使用？</h1>
+						<p>
+							请检查：<br/>
+							1) 账户的服务状态是否显示“正常”——可在网站个人页面或Victor电脑客户端查看账户详情<br/>
+							2) 电脑客户端是否运行正常<br/>
+							3) Mac 上的 FireFox，Windows 上的各类浏览器，是否都已正确配置，并已勾选“Victor”代理<br/>
+							4) 电脑上的防火墙是否误删或禁用了Victor。如是，请将Victor加入白名单或重新安装<br/>
+						</p>
+					</section>
+					<section>
+						<h1>3. 电脑网页都无法打开？</h1>
+						<p>Mac上的FireFox，或Windows上的各类浏览器，电脑客户端与网页代理需同时配置正确，才能保证正常上网。可参照“配置指南”检查配置。</p>
+						<p>如果您退出了电脑客户端，需要勾除浏览器上的“Victor”代理，才能正常访问网站。再次启动客户端时，请记得在浏览器重新勾选。</p>
+						<p>如果您同时安装了 Unblock Youku 等反代理插件，需先停用它。</p>
+					</section>
+					<section>
+						<h1>4. 卸载电脑端后，无法正常上网？</h1>
+						<p>
+							当卸载客户端后，请参照以下说明，恢复浏览器原本配置：<br/>
+							1) Chrome：点击工具栏右上的“地球”图标，选择直接连接。<br/>
+							2) Firefox：点击菜单键 —>“选项” —>“高级”—>“网络”—>连接中的“设置”—>“不使用代理”。<br/>
+							3) 360浏览器：点击工具栏右上的“小地球”图标， 选择直接连接。<br/>
+							4) Dropbox：将“代理服务器”设置选择“无代理服务器”。<br/>
+						</p>
+					</section>
+					<section>
+						<h1>5. 被杀毒软件报告是病毒？</h1>
+						<p>Victor有时会被杀毒软件误认为病毒（有时实在是过度敏感）。如遇到此类情况，请允许程序运行，或将程序添加到白名单。</p>
+						<p>如客户端提示“核心程序被删除”，说明程序已被误删，请重新下载和安装。</p>
+					</section>
+				</div>
 				<section>
 					<h1>6. 切换线路？</h1>
 					<p>Victor提供多条不同地区的线路（又称节点），譬如 Japan（日本）、US（美国），且这些线路会根据情况时常变动，以保证不同地区网站的访问速度。</p>
@@ -167,15 +148,17 @@
 		</div>
 	</div>
 	<footer class="foot">
-		<div class="mr" data-parallax="scroll" data-image-src="img/bookf.jpg" data-speed="0.5"></div>
-		<ul class="service">
-			<li><a href="contact.html">联系我们</a></li>
-			<li><a href="terms.html">服务条款</a></li>
-			<li><a href="privacy.html">隐私政策</a></li>
-		</ul>
-		<div class="footer">
-			<p class="mfoot">Handcrafted by Victor © 2017</p>
-		</div>
+        <div id="smoke">
+            <div class="mr"></div>
+            <ul class="service">
+                <li><a href="contact.html">联系我们</a></li>
+                <li><a href="terms.html">服务条款</a></li>
+                <li><a href="privacy.html">隐私政策</a></li>
+            </ul>
+            <div class="footer">
+                <p class="mfoot">Handcrafted by Victor © 2017</p>
+            </div>
+        </div>
 	</footer>
 </body>
 <script type="text/javascript">
@@ -233,24 +216,33 @@
 			});
 			$('#hs1').click(function(){
 				$('#mq_hide2').slideToggle(200);
-			});	
-			// switch event
-			$('.two').click(function()
-			{
-				$('.switch1').css("display","none");
-				$('.fa-desktop').css("color","#888");
-				$('.switch2').css("display","block");
-				$('.fa-mobile-phone').css("color","#333");
-				$('#down').css("padding-bottom","550px");
-
 			});
-			$('.one').click(function()
-			{
-				$('.switch1').css("display","block");
-				$('.switch2').css("display","none");
-				$('.fa-mobile-phone').css("color","#888");
-				$('.fa-desktop').css("color","#333");
-			});	
+        //ajax
+		let oAjax = $('#oAjax');
+		$('.two').click(function () {
+			$.ajax({
+				url: 'txt/mobile.txt',
+				type: 'GET',
+				success:function (data) {
+					oAjax.html(data);
+					$('.two i').css({'color':'#333'});
+					$('.one i').css({'color':'#888'});
+					console.log('切换为mobile phone');
+                }
+			})
+        });
+        $('.one').click(function () {
+            $.ajax({
+                url: 'txt/pc.txt',
+                type: 'GET',
+                success:function (data) {
+                    oAjax.html(data);
+                    $('.one i').css({'color':'#333'});
+                    $('.two i').css({'color':'#888'});
+                    console.log('切换为PC');
+                }
+            })
+        })
 	});
 </script>
 </html>
