--- a/tr_zh/faq-trzh.html
+++ b/tr_zh/faq-trzh.html
@@ -98,7 +98,7 @@
 					<h1>1. Victor和其他網絡優化服務有什麼不同？</h1>
 					<p>和其他使用開源方案的同類服務不一樣，Victor使用獨家研發的 Smart Tunnel 技術，更適合中國區復雜的網絡環境，能完全避免第三方幹擾，從而保證極佳的速度和穩定性。</p>
 				</section>
-					<div class="switch1">
+                    <div id="oAjax">
 						<section>
 							<h1>2. 電腦端不能正常使用？</h1>
 							<p>
@@ -131,25 +131,6 @@
 							<p>如客戶端提示“核心程序被刪除”，說明程序已被誤刪，請重新下載和安裝。</p>
 						</section>
 					</div>
-					<div class="switch2">
-						<section>
-							<h1>2. 速度不理想怎麼辦？</h1>
-							<p>第一次配置，Victor會自動分配最優線路，但有時默認的線路不一定一直適合您的網絡環境。如果感覺網速慢，可以嘗試切換另一個線路。</p>
-							<p>iOS設備由於系統特性，在切換線路後，需重新保存配置文件</p>
-						</section>
-						<section>
-							<h1>3. 手機可以連接上，但無法加載網頁？</h1>
-							<p>在使用中國移動 4G 網絡時，Victor有可能無法加載網頁，這是移動 4G 網絡特有的問題造成的。Victor會在未來版本盡快完善此問題。</p>
-						</section>
-						<section>
-							<h1>4. 在手機上運行Victor後，一些國內網站的速度變慢了？</h1>
-							<p>有時會有一些國內網站被誤判為海外網站。這時，您可以暫時斷開Victor，等需要訪問海外網站時，再連接。我們會不斷完善該項技術，提升使用體驗。</p>
-						</section>
-						<section>
-							<h1>5. 在安卓上運行後，有些網站仍打不開？</h1>
-							<p>由於安卓設備的特殊性，Victor默認的“智能分流”模式有可能無法覆蓋所有網站。您可以根據您的具體使用情況，在“連接設置”界面切換“全局翻墻”和“智能分流”兩種模式。</p>
-						</section>
-					</div>
 				<section>
 					<h1>6. 切換線路？</h1>
 					<p>Victor提供多條不同地區的線路（又稱節點），譬如 Japan（日本）、US（美國），且這些線路會根據情況時常變動，以保證不同地區網站的訪問速度。</p>
@@ -167,14 +148,16 @@
 		</div>
 	</div>
 	<footer class="foot">
-		<div class="mr" data-parallax="scroll" data-image-src="../img/bookf.jpg" data-speed="0.5"></div>
-		<ul class="service">
-			<li><a href="contact-trzh.html">聯系我們</a></li>
-			<li><a href="terms-trzh.html">服務條款</a></li>
-			<li><a href="privacy-trzh.html">隱私政策</a></li>
-		</ul>
-		<div class="footer">
-			<p class="mfoot">Handcrafted by Victor © 2017</p>
+		<div id="smoke">
+			<div class="mr"></div>
+			<ul class="service">
+				<li><a href="contact-trzh.html">聯系我們</a></li>
+				<li><a href="terms-trzh.html">服務條款</a></li>
+				<li><a href="privacy-trzh.html">隱私政策</a></li>
+			</ul>
+			<div class="footer">
+				<p class="mfoot">Handcrafted by Victor © 2017</p>
+			</div>
 		</div>
 	</footer>
 </body>
@@ -233,24 +216,33 @@
 			});
 			$('#hs1').click(function(){
 				$('#mq_hide2').slideToggle(200);
-			});	
-			// switch event
-			$('.two').click(function()
-			{
-				$('.switch1').css("display","none");
-				$('.fa-desktop').css("color","#888");
-				$('.switch2').css("display","block");
-				$('.fa-mobile-phone').css("color","#333");
-				$('#down').css("padding-bottom","550px");
-
 			});
-			$('.one').click(function()
-			{
-				$('.switch1').css("display","block");
-				$('.switch2').css("display","none");
-				$('.fa-mobile-phone').css("color","#888");
-				$('.fa-desktop').css("color","#333");
-			});	
+        //ajax
+        let oAjax = $('#oAjax');
+        $('.two').click(function () {
+            $.ajax({
+                url: '../txt/mobile-tr_zh.txt',
+                type: 'GET',
+                success:function (data) {
+                    oAjax.html(data);
+                    $('.two i').css({'color':'#333'});
+                    $('.one i').css({'color':'#888'});
+                    console.log('切換為mobile phone');
+                }
+            })
+        });
+        $('.one').click(function () {
+            $.ajax({
+                url: '../txt/pc-tr_zh.txt',
+                type: 'GET',
+                success:function (data) {
+                    oAjax.html(data);
+                    $('.one i').css({'color':'#333'});
+                    $('.two i').css({'color':'#888'});
+                    console.log('切換為PC');
+                }
+            })
+        })
 	});
 </script>
 </html>
